fix bug with overflow

--- a/client/less/animations.less
+++ b/client/less/animations.less
@@ -1,7 +1,8 @@
 .fade-down {
+	box-sizing: border-box;
 	padding: 7px;
-	overflow: auto;
 	width: 100%;
+	height: 100%;
 	transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .3s;
 	&.ng-enter{
 		position: absolute;
@@ -24,9 +25,10 @@
 }
 
 .fade-right {
+	box-sizing: border-box;
 	position: absolute;
-	overflow: auto;
 	width: 100%;
+	height: 100%;
 	transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
 	&.ng-enter{
 		transform: translate(20px, 0);
