--- a/client/less/content.less
+++ b/client/less/content.less
@@ -1,16 +1,21 @@
 @import "variables.less";
 
 .content {
-	width: 100%;
+	width: auto;
 	height: 100%;
-	padding-left: 250px;
+	//padding-left: 250px;
 	background: @content-bg;
 	transition: all linear 0.3s;
+	position: relative;
+	overflow: auto;
 	.topbar {
 		padding: 20px;
 		color: @gray;
 		background: @topbar-bg;
 		height: 80px;
+		position:absolute;
+		width: 100%;
+		z-index: 100;
 		.toggle-menu {
 			border: none;
 			color: #fff;
@@ -37,12 +42,15 @@
 		}
 	}
 	.main {
-		width: 100%;
+		width: auto;
+		height: 100%;
 		padding-bottom: 0;
 		position: relative;
+		overflow-y:scroll;
+		padding-top: 80px;
 	}
 	&.hidden-nav {
-		padding-left: 80px;
+		//padding-left: 80px;
 	}
 	@media (max-width: 992px) {
 		padding-left: 80px; 
